# DNNPartitioning

./: .gitignore  CMakeLists.txt  EfficientNet-to-ONNX.py  PagedAttentionComparison.sh  ResNet50-Structure.py  ResNet50-to-ONNX.py  chunk_timing.csv  chunk_timing_min.csv  compare_online.py  compare_overhead.py  compare_overhead_cpp.py  compileToEngine.sh  compileToEngine2.sh  cuda_smoke  cuda_smoke.cpp  generate_cpp_csv.sh  instructions.txt  memory_layout.html  memory_layout_gpt2.html  memory_layout_paged.html  memory_layout_standard.html  offline.py  online  online.cpp  plot_diagram.py  profile_all.sh  profile_cpp.sh  profile_limited_memory.cpp  profile_memory.cpp  profile_resnet50.sh  resnet50_profile.nsys-rep  resnet50_profile_20251023_124711.nsys-rep  resnet50_profile_20251023_124711.sqlite  resnet50_profile_nvtx.nsys-rep  run_resnet50.py  run_trt_PagedAttention  run_trt_gpu_fused  run_trt_graph  run_trt_naive  run_trt_pinned  (+17 more)
nsys_reports/: run_trt_gpu_2025-11-12_12-47-32.nsys-rep  run_trt_gpu_2025-11-12_12-47-32.qdstrm  run_trt_graph_2025-11-12_12-47-36.nsys-rep  run_trt_graph_2025-11-12_12-47-36.qdstrm  run_trt_naive_2025-11-12_12-47-28.nsys-rep  run_trt_naive_2025-11-12_12-47-28.qdstrm  run_trt_pinned_2025-11-12_12-47-39.nsys-rep  run_trt_pinned_2025-11-12_12-47-39.qdstrm
reports/: resnet50_2025-10-23_13-22-25.nsys-rep  resnet50_2025-10-30_13-01-07.nsys-rep  resnet50_2025-10-30_13-01-07_inference_timing.csv  run_trt_gpu_2025-11-12_12-45-02.csv  run_trt_gpu_2025-11-12_12-59-28.csv  run_trt_gpu_fused_2025-11-12_12-59-28.csv  run_trt_graph_2025-11-12_12-45-03.csv  (+11 more)
(+2 files in other folders)
